src/sed_plugins.h

/* Constants */
#define sedCloseEnough 10e-5
/* Get/SetProjectType, NewLevel */
#define spt_jkdf2 0
#define spt_mots  1
#define spt_ijim  2
/* Get/SetLevelHeader flags */
#define lh_version     1
#define lh_gravity     2
#define lh_skyZ        4
#define lh_cskyOffs    8
#define lh_horDist     0x10
#define lh_horPPR      0x20
#define lh_hskyOffs    0x40
#define lh_mipmapDist  0x80
#define lh_lodDist     0x100
#define lh_perspDist   0x200
#define lh_gouraudDist 0x400
#define lh_ppu         0x800
#define lh_masterCmp   0x1000
#define lh_fog         0x2000
#define lh_all         0x2FFF
/* Get/SetSector flags */
#define s_flags      1
#define s_ambient    2
#define s_extra      4
#define s_pointlight 8
#define s_cmp        0x10
#define s_tint       0x20
#define s_sound      0x40
#define s_sndvol     0x80
#define s_thrust     0x100
#define s_layer      0x200
#define s_all        0xFFFF
/* Get/SetSurface flags */
#define sf_adjoin      1
#define sf_adjoinflags 2
#define sf_surfflags   4
#define sf_faceflags   8
#define sf_material    0x10
#define sf_geo         0x20
#define sf_light       0x40
#define sf_tex         0x80
#define sf_extralight  0x100
#define sf_txscale     0x200
#define sf_all         0x3FF
/* Get/SetThing flags */
#define th_name        1
#define th_sector      2
#define th_position    4
#define th_orientation 8
#define th_layer       0x10
#define th_all         0x1F
/* Get/SetLight flags */
#define lt_position     1
#define lt_intensity    2
#define lt_range        4
#define lt_color        8
#define lt_flags        0x10
#define lt_layer        0x20
#define lt_all          0xFF
/* Map Mode constants */
#define mm_sc 0 /* Sectors */
#define mm_sf 1 /* surfaces */
#define mm_vx 2 /* vertices */
#define mm_th 3 /* Things */
#define mm_ed 4 /* Edges */
#define mm_lt 5 /* Lights */
#define mm_fr 6 /* frames */
/* SurfaceUpdate "how" constant */
#define su_texture   1
#define su_floorflag 2
#define su_sector    4
#define su_all       0xFF
/* Undo change constants */
#define uc_changed  0
#define uc_added    1
#define uc_deleted  2
#define sc_values   1
#define sc_geometry 2
#define sc_all      3
/* COG value types */
#define ct_unknown  0
#define ct_ai       1
#define ct_cog      2
#define ct_key      3
#define ct_mat      4
#define ct_msg      5
#define ct_3do      6
#define ct_sec      7
#define ct_wav      8
#define ct_surface  9
#define ct_template 10
#define ct_thing    11
#define ct_int      12
#define ct_flex     13
#define ct_vector   14
/* PickResource constants */
#define pr_thing     1
#define pr_template  2
#define pr_cmp       3
#define pr_secsound  4
#define pr_mat       5
#define pr_cog       6
#define pr_layer     7
#define pr_3do       8
#define pr_ai        9
#define pr_key       10
#define pr_snd       11
#define pr_pup       12
#define pr_spr       13
#define pr_par       14
#define pr_per       15
#define pr_jklsmksan 16
/* EditFlags constants */
#define ef_sector    1
#define ef_surface   2
#define ef_adjoin    3
#define ef_thing     4
#define ef_face      5
#define ef_light     6
#define ef_geomode   7
#define ef_lightmode 8
#define ef_texmode   9
/* PanMessage constants */
#define msg_info    0
#define msg_warning 1
#define msg_error   2
/* SendKey flags */
#define sk_ctrl  1
#define sk_shift 2
#define sk_alt   4
/* GetConsErrorType constants */
#define ce_normal  0
#define ce_warning 1
#define ce_error   2
/* GetConsErrorItemType constants */
#define cei_none    0
#define cei_sector  1
#define cei_surface 2
#define cei_thing   3
#define cei_cog     4
/* GetSedString constants */
#define ss_projectDir  1
#define ss_sedDir      2
#define ss_gameDir     3
#define ss_levelFile   4
#define ss_configFile  5 /* ex js_jedregkey */
#define ss_lecLogoJK   6
#define ss_recent1     7
#define ss_recent2     8
#define ss_recent3     9
#define ss_recent4     10
#define ss_res1Gob     11
#define ss_res2Gob     12
#define ss_spGob       13
#define ss_mp1Gob      14
#define ss_mp2Gob      15
#define ss_mp3Gob      16
#define ss_lecLogoIJIM 17
/* GetJEDWindow constants */
#define sw_Main        0
#define sw_ConsChecker 1
#define sw_ItemEdit    2
#define sw_PlacedCogs  3
#define sw_MsgWindow   4
#define sw_3DPreview   5
#define sw_ToolWindow  6
/* Get/SetRendererDoube constants */
#define rd_CamX     0
#define rd_CamY     1
#define rd_CamZ     2
#define rd_Scale    3
#define rd_GridX    4
#define rd_GridY    5
#define rd_GridZ    6
#define rd_GridLine 7
#define rd_GridDot  8
#define rd_GridStep 9
/* Get/SetRendererVector constants */
#define rv_CamPos    10
#define rv_GridPos   11
#define rv_CamXAxis  12
#define rv_CamYAxis  13
#define rv_CamZAxis  14
#define rv_GridXAxis 15
#define rv_GridYAxis 16
#define rv_GridZAxis 17
/* SetRenderColor constants */
#define rc_Current    0
#define rc_Background 1
/* SetCulling constants */
#define cc_CullNone  0
#define cc_CullBack  -1
#define cc_CullFront 1
/* CreateWFRenderer constants */
#define cr_Default  0
#define cr_OpenGL   1
#define cr_Software 2
typedef struct
{
    double x;
    double y;
} TSedVector2;
typedef union 
{
    struct { double dx, dy, dz; };
    struct { double x, y, z; };
    struct { double pitch, yaw, roll; };
} TSedVector3;
typedef struct 
{
    float r, g, b, a;  // a - alpha or light intensity
} TSedColor;
typedef struct
{
    TSedVector3 p1;
    TSedVector3 p2;
} TSedBox;
typedef struct 
{
    TSedColor color;
    TSedVector3 position;
    double minRange;  // minimum light range at which light will still illuminate objects
    double maxRange;  // maximum light intensity range before it starts to falloff
} TSedPointLight;
typedef struct 
{
    bool enabled;
    TSedColor color;
    double fogStart;
    double fogEnd;
} TSedFog;
typedef struct
{
    int32_t version;
    double gravity;
    double ceilingSkyHeight;
    TSedVector2 ceilingSkyOffset;
    double horizonSkyDistance;
    double horizonSkyPixelsPerRev;
    TSedVector2 horizonSkyOffset;
    double mipMapDistances[4];
    double lodDistances[4];
    double perspectiveDistance;
    double gouraudDistance;
    double ppunit; // Pixels per unit
    const wchar_t* aMasterCmp;
    TSedFog fog;
} TSedLevelHeader;
typedef struct
{
    int32_t flags;
    TSedColor ambient;
    TSedColor extraLight;
    TSedPointLight pointLight;
    const wchar_t* aColorMap;
    TSedColor tint;
    const wchar_t* aSound;
    double soundVolume;
    TSedVector3 thrust;
    int32_t layer;
} TSedSectorRec;
typedef struct 
{
    int32_t adjoinSec;
    int32_t adjoinSurf;
    int32_t adjoinflags;
    int32_t surfflags;
    int32_t faceflags;
    const wchar_t* aMaterial;
    int32_t geo;
    int32_t light;
    int32_t tex;
    TSedColor extraLight;
    float uscale;
    float vscale;
} TSedSurfaceRec;
typedef struct {
    const wchar_t* aName;
    int32_t sector;
    TSedVector3 position;
    TSedVector3 rotation;
    int32_t layer;
} TSedThingRec;
typedef struct 
{
    int32_t flags;
    int32_t layer;
    TSedColor color;
    double intensity;
    double range;
    TSedVector3 position;
} TSedLightRec;
typedef interface ISedLevel ISedLevel;
typedef interface ISedWFRenderer ISedWFRenderer;