src/sed_plugins.pas

unit sed_plugins;

interface
    uses System.Win.ComObj;
const
sedCloseEnough = 10e-5;

{Get/SetProjectType, NewLevel}
spt_jkdf2 = 0;
spt_mots  = 1;
spt_ijim  = 2;

{Get/SetLevelHeader flags}
lh_version     = 1;
lh_gravity     = 2;
lh_skyZ        = 4;
lh_cskyOffs    = 8;
lh_horDist     = $10;
lh_horPPR      = $20;
lh_hskyOffs    = $40;
lh_mipmapDist  = $80;
lh_lodDist     = $100;
lh_perspDist   = $200;
lh_gouraudDist = $400;
lh_ppu         = $800;
lh_masterCmp   = $1000;
lh_fog         = $2000;
lh_all         = $2FFF;

{Get/SetSector flags}
s_flags      = 1;
s_ambient    = 2;
s_extra      = 4;
s_pointlight = 8;
s_cmp        = $10;
s_tint       = $20;
s_sound      = $40;
s_sndvol     = $80;
s_thrust     = $100;
s_layer      = $200;
s_all        = $FFFF;

{Get/SetSurface flags}
sf_adjoin      = 1;
sf_adjoinflags = 2;
sf_surfflags   = 4;
sf_faceflags   = 8;
sf_material    = $10;
sf_geo         = $20;
sf_light       = $40;
sf_tex         = $80;
sf_extralight  = $100;
sf_txscale     = $200;
sf_all         = $3FF;

{Get/SetThing flags}
th_name        = 1;
th_sector      = 2;
th_position    = 4;
th_orientation = 8;
th_layer       = $10;
th_all         = $1F;

{Get/SetLight flags}
lt_position     = 1;
lt_intensity    = 2;
lt_range        = 4;
lt_color        = 8;
lt_flags        = $10;
lt_layer        = $20;
lt_all          = $FF;

{Map Mode constants}
mm_sc = 0; {Sectors}
mm_sf = 1; {surfaces}
mm_vx = 2; {vertices}
mm_th = 3; {Things}
mm_ed = 4; {Edges}
mm_lt = 5; {Lights}
mm_fr = 6; {frames}

{SurfaceUpdate "how" constant}
su_texture    = 1;
su_floorflag  = 2;
su_sector     = 4;
su_all        = $FF;

{Undo change constants}
uc_changed  = 0;
uc_added    = 1;
uc_deleted  = 2;
sc_values   = 1;
sc_geometry = 2;
sc_all      = 3;

{COG value types}
ct_unknown  = 0;
ct_ai       = 1;
ct_cog      = 2;
ct_key      = 3;
ct_mat      = 4;
ct_msg      = 5;
ct_3do      = 6;
ct_sec      = 7;
ct_wav      = 8;
ct_surface  = 9;
ct_template = 10;
ct_thing    = 11;
ct_int      = 12;
ct_flex     = 13;
ct_vector   = 14;

{PickResource constants}
pr_thing     = 1;
pr_template  = 2;
pr_cmp       = 3;
pr_secsound  = 4;
pr_mat       = 5;
pr_cog       = 6;
pr_layer     = 7;
pr_3do       = 8;
pr_ai        = 9;
pr_key       = 10;
pr_snd       = 11;
pr_pup       = 12;
pr_spr       = 13;
pr_par       = 14;
pr_per       = 15;
pr_jklsmksan = 16;

{EditFlags constants}
ef_sector    = 1;
ef_surface   = 2;
ef_adjoin    = 3;
ef_thing     = 4;
ef_face      = 5;
ef_light     = 6;
ef_geomode   = 7;
ef_lightmode = 8;
ef_texmode   = 9;

{PanMessage constants}
msg_info    = 0;
msg_warning = 1;
msg_error   = 2;

{SendKey flags}
sk_ctrl  = 1;
sk_shift = 2;
sk_alt   = 4;

{GetConsErrorType constants}
ce_normal  = 0;
ce_warning = 1;
ce_error   = 2;

{GetConsErrorItemType constants}
cei_none    = 0;
cei_sector  = 1;
cei_surface = 2;
cei_thing   = 3;
cei_cog     = 4;

{GetSedString constants}
ss_projectDir  = 1;
ss_sedDir      = 2;
ss_gameDir     = 3;
ss_levelFile   = 4;
ss_configFile  = 5; // ex js_jedregkey
ss_lecLogoJK   = 6;
ss_recent1     = 7;
ss_recent2     = 8;
ss_recent3     = 9;
ss_recent4     = 10;
ss_res1Gob     = 11;
ss_res2Gob     = 12;
ss_spGob       = 13;
ss_mp1Gob      = 14;
ss_mp2Gob      = 15;
ss_mp3Gob      = 16;
ss_lecLogoIJIM = 17;

{GetJEDWindow constants}
sw_Main         =0;
sw_ConsChecker  =1;
sw_ItemEdit     =2;
sw_PlacedCogs   =3;
sw_MsgWindow    =4;
sw_3DPreview    =5;
sw_ToolWindow   =6;

// Get/SetRendererDoube constants
rd_CamX     = 0;
rd_CamY     = 1;
rd_CamZ     = 2;
rd_Scale    = 3;
rd_GridX    = 4;
rd_GridY    = 5;
rd_GridZ    = 6;
rd_GridLine = 7;
rd_GridDot  = 8;
rd_GridStep = 9;

// Get/SetRendererVector constants
rv_CamPos    = 10;
rv_GridPos   = 11;
rv_CamXAxis  = 12;
rv_CamYAxis  = 13;
rv_CamZAxis  = 14;

rv_GridXAxis = 15;
rv_GridYAxis = 16;
rv_GridZAxis = 17;

{SetRenderColor constants}
rc_Current    = 0;
rc_Background = 1;

{SetCulling constants}
cc_CullNone  = 0;
cc_CullBack  = -1;
cc_CullFront = 1;

{CreateWFRenderer constants}
cr_Default  = 0;
cr_OpenGL   = 1;
cr_Software = 2;

type

TSedVector2 = record
  x, y: Double;
end;

TSedVector3 = record
  case integer of
    0: (dx,dy,dz: Double);
    1: (x,y,z: Double);
    2: (pitch, yaw, roll: Double);
end;

TSedColor = record
    r, g, b, a: Single;  // a - alpha or light intensity
end;

TSedBox = record
  p1: TSedVector3;
  p2: TSedVector3;
end;

TSedPointLight = record
  color: TSedColor;
  position: TSedVector3;
  minRange: Double;  // minimum light range at which light will still illuminate objects
  maxRange: Double;  // maximum light intensity range before it starts to falloff
end;

TSedFog = record
  enabled: Boolean;
  color: TSedColor;
  fogStart: Double;
  fogEnd: Double;
end;

TSedLevelHeader = record
  version: Longint;
  gravity: Double;
  ceilingSkyHeight: Double;
  ceilingSkyOffset: TSedVector2;
  horizonSkyDistance,
  horizonSkyPixelsPerRev: Double;
  horizonSkyOffset: TSedVector2;
  mipMapDistances: array[0..3] of Double;
  lodDistances: array[0..3] of Double;
  perspectiveDistance,
  gouraudDistance: Double;
  ppunit: Double;  // pixels per unit
  aMasterCmp: PChar;
  fog: TSedFog;
end;

TSedSectorRec = record
  flags: Longint;
  ambient: TSedColor;
  extraLight: TSedColor;
  pointLight: TSedPointLight;
  aColorMap: PChar;
  tint: TSedColor;
  aSound: PChar;
  soundVolume: Double;
  thrust: TSedVector3;
  layer: Longint;
end;

TSedSurfaceRec = record
  adjoinSec, adjoinSurf: Longint;
  adjoinflags,
  surfflags,
  faceflags: Longint;
  aMaterial: PChar;
  geo,light,tex: Longint;
  extraLight: TSedColor;
  uscale,vscale: Single;
end;

TSedThingRec = record
  aName: PChar;
  sector: Longint;
  position: TSedVector3;
  rotation: TSedVector3;
  layer: Longint;
end;

TSedLightRec = record
  flags: Longint;
  layer: Longint;
  color: TSedColor;
  intensity: Double;
  range: Double;
  position: TSedVector3;
end;

{endtype}

{ Wireframe renderer interface}
{JED 0.93}
ISedWFRenderer = class
  function QueryInterface(const IID: TGUID; out Obj): HResult; virtual; stdcall; abstract;
  function AddRef: Integer; virtual; stdcall; abstract;
  function Release: Integer; virtual; stdcall; abstract;

  {Renderer attributes}
  function GetRendererDouble(what: Integer): Double; virtual; stdcall; abstract;
  procedure SetRendererDouble(what: Integer; val: Double); virtual; stdcall; abstract;
  procedure GetRendererVector(what: Integer; var x,y,z: Double); virtual; stdcall; abstract;
  procedure SetRendererVector(what: Integer; x,y,z: Double); virtual; stdcall; abstract;

  function NSelected: Integer; virtual; stdcall; abstract;
  function GetNSelected(n: Integer): Integer; virtual; stdcall; abstract;
  procedure SetViewPort(x,y,w,h: Integer); virtual; stdcall; abstract;
  procedure SetColor(what,r,g,b: Byte); virtual; stdcall; abstract;
  procedure SetPointSize(size: Double); virtual; stdcall; abstract;
  procedure BeginScene; virtual; stdcall; abstract;
  procedure EndScene; virtual; stdcall; abstract;
  procedure SetCulling(how: Integer); virtual; stdcall; abstract;

  procedure DrawSector(sc: Integer); virtual; stdcall; abstract;
  procedure DrawSurface(sc,sf: Integer); virtual; stdcall; abstract;
  procedure DrawThing(th: Integer); virtual; stdcall; abstract;

  procedure DrawLine(x1,y1,z1, x2,y2,z2: Double); virtual; stdcall; abstract;
  procedure DrawVertex(X,Y,Z: Double); virtual; stdcall; abstract;
  procedure DrawGrid; virtual; stdcall; abstract;

  procedure BeginPick(x,y: Integer); virtual; stdcall; abstract;
  procedure EndPick; virtual; stdcall; abstract;

  procedure PickSector(sc: Integer; id: Integer); virtual; stdcall; abstract;
  procedure PickSurface(sc,sf: Integer;id: Integer); virtual; stdcall; abstract;
  procedure PickLine(x1,y1,z1, x2,y2,z2: Double;id: Integer); virtual; stdcall; abstract;
  procedure PickVertex(X,Y,Z: Double; id: Integer); virtual; stdcall; abstract;

  procedure BeginRectPick(x1,y1,x2,y2: Integer); virtual; stdcall; abstract;
  procedure EndRectPick; virtual; stdcall; abstract;
  function IsSectorInRect(sc: Integer): Boolean; virtual; stdcall; abstract;
  function IsSurfaceInRect(sc,sf: Integer): Boolean; virtual; stdcall; abstract;
  function IsLineInRect(x1,y1,z1, x2,y2,z2: Double): Boolean; virtual; stdcall; abstract;
  function IsVertexInRect(X,Y,Z: Double): Boolean; virtual; stdcall; abstract;

  function GetXYZonPlaneAt(scX,scY: Integer; const pnormal:TSedVector3; pX,pY,pZ: Double; var X,Y,Z: Double): Boolean; virtual; stdcall; abstract;
  function GetGridAt(scX,scY: Integer; var X,Y,Z: Double): Boolean; virtual; stdcall; abstract;
  procedure GetNearestGridNode(iX,iY,iZ: Double; Var X,Y,Z: Double); virtual; stdcall; abstract;
  procedure ProjectPoint(x,y,z: Double; Var winX,winY: Integer); virtual; stdcall; abstract;
  procedure UnProjectPoint(winX,winY: Integer; WinZ: Double; var x,y,z: Double); virtual; stdcall; abstract;
  function IsSurfaceFacing(sc,sf: Integer): Boolean; virtual; stdcall; abstract;

  function HandleWMQueryPal: Integer; virtual; stdcall; abstract;
  function HandleWMChangePal: Integer; virtual; stdcall; abstract;
end;

ISedLevel = class
  function QueryInterface(const IID: TGUID; out Obj): HResult; virtual; stdcall; abstract;
  function AddRef: Integer; virtual; stdcall; abstract;
  function Release: Integer; virtual; stdcall; abstract;

  {Level header}
  procedure GetLevelHeader(var lh: TSedLevelHeader; flags: Integer); virtual; stdcall; abstract;
  procedure SetLevelHeader(const lh: TSedLevelHeader; flags: Integer); virtual; stdcall; abstract;

  function NumSectors: Integer; virtual; stdcall; abstract;
  function NumThings: Integer; virtual; stdcall; abstract;
  function NumLights: Integer; virtual; stdcall; abstract;
  function NumCogs: Integer; virtual; stdcall; abstract;

  {Sectors}
  function SectorAdd: Integer; virtual; stdcall; abstract;
  procedure SectorDelete(n: Integer); virtual; stdcall; abstract;

  procedure SectorGet(sec: Integer; var rec: TSedSectorRec; flags: Integer); virtual; stdcall; abstract;
  procedure SectorSet(sec: Integer; const rec: TSedSectorRec; flags: Integer); virtual; stdcall; abstract;

  function SectorNumVertices(sec: Integer): Integer; virtual; stdcall; abstract;
  function SectorNumSurfaces(sec: Integer): Integer; virtual; stdcall; abstract;

  procedure SectorGetVertex(sec, vn: Integer; var vert: TSedVector3); virtual; stdcall; abstract;
  procedure SectorSetVertex(sec, vn: Integer; const vert: TSedVector3); virtual; stdcall; abstract;

  function SectorAddVertex(sec: Integer; const vert: TSedVector3): Integer; virtual; stdcall; abstract;
  function SectorFindVertex(sec: Integer; const vert: TSedVector3): Integer; virtual; stdcall; abstract;
  function SectorDeleteVertex(sec: Integer; vn: Integer): Integer; virtual; stdcall; abstract;

  function SectorAddSurface(sec: Integer): Integer; virtual; stdcall; abstract;
  procedure SectorDeleteSurface(sec,surf: Integer); virtual; stdcall; abstract;
  procedure SectorUpdate(sec: Integer); virtual; stdcall; abstract;
